--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --no-eslint",
+    "build": "vue-cli-service build",
     "dev": "vue-cli-service serve",  
     "start": "vue-cli-service serve" 
   },
