--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/motion": "^3.0.3",
     "axios": "^1.11.0",
     "chart.js": "^4.4.8",
     "chartjs-chart-matrix": "^1.2.0",
@@ -29,10 +30,13 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.6",
     "sass": "^1.32.13",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "browserslist": [
     "> 1%",
