--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@heroicons/vue": "^2.2.0",
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.11.0",
     "chart.js": "^4.4.8",
@@ -17,6 +18,7 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.3",
     "element-plus": "^2.10.4",
+    "lucide-vue-next": "^0.540.0",
     "pinia": "^3.0.3",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.2.13",
