--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.3",
     "element-plus": "^2.10.4",
+    "html2canvas": "^1.4.1",
     "lucide-vue-next": "^0.540.0",
+    "md-editor-v3": "^4.18.2",
     "pinia": "^3.0.3",
+    "qrcode": "^1.5.3",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -28,6 +31,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
